@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-04T00:28:03Z",
-  "count_outdated" : 3678,
-  "uniques_outdated" : 1648,
-  "count" : 3816,
-  "uniques" : 1737,
+  "timestamp" : "2024-02-04T08:01:52Z",
+  "count_outdated" : 3679,
+  "uniques_outdated" : 1649,
+  "count" : 3817,
+  "uniques" : 1738,
   "clones" : [
-    {
-      "timestamp": "2024-01-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-22T00:00:00Z",
       "count": 29,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-02-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
