@@ -3,11 +3,6 @@
   "uniques": 60,
   "clones": [
     {
-      "timestamp": "2024-01-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-01-22T00:00:00Z",
       "count": 29,
       "uniques": 20
@@ -71,6 +66,11 @@
       "timestamp": "2024-02-03T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-02-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
